[tool.poetry]
name = "prefect-2.0-code-contest"
version = "0.1.0"
description = ""
authors = ["Stéphan Taljaard <staljaard@rems2.com>"]

[tool.poetry.dependencies]
python = "^3.9"
prefect = "^2.0.1"
requests = "^2.28.1"
Pillow = "^9.2.0"

[tool.poetry.dev-dependencies]
black = "^22.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
